# PI-Personal-Instance-OS

./: .env.example  .env.production.example  AGENTS.md  CHANGELOG.md  PROJECT.md  README.md  autostart-run.ps1  backup.ps1  change-access-domain.ps1  compose.yml  remove-autostart.ps1  setup.ps1  start.ps1  status.ps1  卸载开机自启.bat  安装开机自启.bat
.github/workflows/: cmx-mcp-tests.yml
cmx-mcp/: .env.example  README.md
cmx-mcp/src/cmx_mcp/: mastodon_client.py  server.py
docs/: AI_RESIDENT_MCP_DESIGN.md  ARCHITECTURE.md  CLOUDFLARE.md  CMX_5000_CHAR_LIMIT_TEST.md  CMX_MCP_REMOTE_SOCIAL_PLAN.md  CMX_MCP_SMALL_INSTANCE_DESIGN.md  DEPLOYMENT.md  MUTABLE_WEB_DOMAIN_RFC.md  MVP_SCOPE.md
mastodon-overrides/v4.6.3/app/validators/: status_length_validator.rb
mcp/: .gitignore  README.md  add-bot.ps1  install.ps1  pyproject.toml  status.ps1
mcp/src/cmx_mcp/: __init__.py  app.py  cli.py  compact.py  config.py  db.py  extensions.py  mastodon_client.py  remote.py  remote_auth.py  scope.py  secrets.py  security.py  server.py
mcp/tests/: test_compact.py  test_config.py  test_db.py  test_phase_a.py  test_remote_auth.py  test_secrets.py  test_status_limit_contract.py
skills/project-doc-sync/: SKILL.md
