[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmx-mcp"
version = "0.2.0rc3"
description = "Token-efficient local STDIO MCP for a small private CMX/Mastodon instance"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "mcp>=1,<2",
  "httpx>=0.27,<1",
]

[project.scripts]
cmx-mcp = "cmx_mcp.app:main"
cmx-admin = "cmx_mcp.cli:main"
cmx-smoke = "cmx_mcp.smoke:main"
cmx-authorize = "cmx_mcp.authorize:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
